# modular-decomposition

./: .clang-format  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ut.yml
notebooks/: 01_BenchResult.ipynb  bench_result.csv  bench_result_scatter.yml
scripts/: bench.py  mw_pace.py
src/main/cpp/: CMakeLists.txt  modular-bench.cpp
src/main/cpp/ds/graph/: Graph.hpp
src/main/cpp/ds/set/: ArrayBitset.hpp  Bitmap.cpp  Bitmap.hpp  FastSet.cpp  FastSet.hpp  README.md  SortedVectorSet.hpp  basic_set.hpp
src/main/cpp/ds/tree/: IntRootedForest.hpp
src/main/cpp/modular/: MDTree.cpp  MDTree.hpp
src/main/cpp/modular/compute/: MDComputeNode.cpp  MDComputeNode.hpp  MDSolver.cpp  MDSolver.hpp  assembly.cpp  misc.cpp  pivot.cpp  promotion.cpp  refinement.cpp
src/main/cpp/readwrite/: edge_list.cpp  edge_list.hpp
src/main/cpp/tww/ds/graph/: Graph.hpp
src/main/cpp/tww/ds/set/: ArrayBitset.hpp  Bitmap.cpp  Bitmap.hpp  FastSet.cpp  FastSet.hpp  SortedVectorSet.hpp  basic_set.hpp
src/main/cpp/tww/ds/tree/: IntRootedForest.hpp
src/main/cpp/tww/util/: Benchmark.hpp  Random.cpp  Random.hpp  functional.hpp  profiler.cpp  profiler.hpp  util.cpp  util.hpp
src/main/cpp/util/: Benchmark.hpp  Random.cpp  Random.hpp  functional.hpp  profiler.cpp  profiler.hpp  util.cpp  util.hpp
src/main/python/modular/: MDTree.py  __init__.py
src/main/python/modular/compute/: MDComputeNode.py  MDSolver.py  assembly.py  misc.py  pivot.py  promotion.py  refinement.py
src/main/python/modular/compute_naive/: MDNaiveSolver.py
src/main/python/modular/tree/: RootedForest.py  RootedTree.py
src/main/python/modular/util/: matrix_util.py
src/python/main/modular/: MDNode.py  MDTree.py  OperationType.py
src/python/main/modular/compute/: MDComputeNode.py  MDSolver.py  assembly.py  misc.py  pivot.py  promotion.py
src/python/main/modular/compute_naive/: MDNaiveSolver.py
src/python/test/compute/: test_pivot.py  test_refinement.py
src/python/test/compute_naive/: test_MDNaiveSolver.py
src/python/test/tree/: test_RootedTree.py
src/test/cpp/: CMakeLists.txt
src/test/cpp/ds/graph/: Graph_test.cpp
src/test/cpp/ds/set/: ArrayBitset_test.cpp  Bitmap_test.cpp  SortedVectorSet_test.cpp
src/test/cpp/ds/tree/: IntRootedForest_test.cpp
src/test/cpp/modular/: MDTree_test.cpp
src/test/cpp/tww/ds/graph/: Graph_test.cpp
src/test/cpp/tww/ds/set/: ArrayBitset_test.cpp  Bitmap_test.cpp  SortedVectorSet_test.cpp
src/test/cpp/tww/ds/tree/: IntRootedForest_test.cpp
src/test/python/modular/: test_MDTree.py
src/test/python/modular/compute/: test_MDSolver.py  test_assembly.py  test_pivot.py  test_refinement.py
src/test/python/modular/tree/: test_RootedForest.py
src/test/python/modular/util/: test_matrix_util.py
